# ActiveRestart

./: .gitignore  CMakeLists.txt  README.md
include/: processQuery.hpp  typeAssert.hpp
src/: main.cpp  processQuery.cpp
